--- a/style file/style.css
+++ b/style file/style.css
@@ -93,6 +93,38 @@ margin-top: 30px;
 
 }
 
+footer{
+    /* Rectangle 5 */
 
+height: 577px;
+
+/* Dark 01 */
+background: rgb(21, 20, 20);
+
+}
+
+.left-side{
+color: rgb(248, 248, 248);
+font-family: Work Sans;
+
+}
+
+.ftitle{
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 53px;
+}
+
+.footer-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 120px;
+}
+
+.icon{
+    display: flex;
+    gap: 8px;
+}
 
  
